Fixed p spacing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,6 +663,6 @@ code {
 	height: auto;
 }
 
-p {
-	margin-top: 20px;
+ul {
+	margin-bottom: 20px;
 }
